# lit-sass

./: CMakeLists.txt  Makefile  README.md
OSX-x64/: libcencode.dylib  libsass.dylib
